--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,43 @@
     }
   }
 </script>
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+  // استبدل المعلومات أدناه بالكود الذي نسخته من الخطوة رقم 1
+  const firebaseConfig = {
+    apiKey: "AIzaSy...",
+    authDomain: "gostation-visitors.firebaseapp.com",
+    projectId: "gostation-visitors",
+    storageBucket: "gostation-visitors.appspot.com",
+    messagingSenderId: "...",
+    appId: "..."
+  };
+
+  // تهيئة Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  // ربط زر "حفظ الدخول" الموجود في تصميمك
+  window.submitVisitor = async function() {
+    // كود افتراضي لجلب القيم من الحقول (تأكد من مطابقة id الحقول في HTML الخاص بك)
+    const visitorName = document.querySelector('input[placeholder="اسم الزائر *"]').value;
+    const company = document.querySelector('input[placeholder="الجهة / الشركة"]').value;
+
+    try {
+      const docRef = await addDoc(collection(db, "visitors_log"), {
+        name: visitorName,
+        company: company,
+        date: new Date().toLocaleString()
+      });
+      alert("تم التسجيل بنجاح!");
+    } catch (e) {
+      console.error("Error: ", e);
+      alert("حدث خطأ أثناء التسجيل");
+    }
+  }
+</script>
 </body>
 </html>
 
