--- a/index.html
+++ b/index.html
@@ -1043,73 +1043,36 @@
       });
     });
   </script>
-  <script type="module">
+ <script type="module">
+  // تحميل مكتبات Firebase
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
   import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-  // استبدل هذا الجزء بالكود الذي نسخته من الخطوة رقم 1
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "gostation-visitors.firebaseapp.com",
-    projectId: "gostation-visitors",
-    storageBucket: "gostation-visitors.appspot.com",
-    messagingSenderId: "...",
-    appId: "..."
-  };
-
-  // تهيئة Firebase وقاعدة البيانات
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  // مثال: دالة لإرسال البيانات عند الضغط على زر
-  window.saveData = async function() {
-    try {
-      const docRef = await addDoc(collection(db, "visitors"), {
-        name: "زائر جديد",
-        date: new Date().toLocaleString()
-      });
-      alert("تم التسجيل بنجاح في قاعدة البيانات!");
-    } catch (e) {
-      console.error("خطأ في التسجيل: ", e);
-      alert("فشل التسجيل، تأكد من إعدادات الحماية (Rules)");
-    }
-  }
-</script>
-  <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
-  // استبدل المعلومات أدناه بالكود الذي نسخته من الخطوة رقم 1
+  // إعدادات مشروعك (استبدل القيم أدناه بالقيم التي نسختها من الخطوة 1)
   const firebaseConfig = {
     apiKey: "AIzaSy...",
     authDomain: "gostation-visitors.firebaseapp.com",
     projectId: "gostation-visitors",
-    storageBucket: "gostation-visitors.appspot.com",
-    messagingSenderId: "...",
-    appId: "..."
+    // ... أضف الباقي هنا
   };
 
-  // تهيئة Firebase
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
-  // ربط زر "حفظ الدخول" الموجود في تصميمك
-  window.submitVisitor = async function() {
-    // كود افتراضي لجلب القيم من الحقول (تأكد من مطابقة id الحقول في HTML الخاص بك)
-    const visitorName = document.querySelector('input[placeholder="اسم الزائر *"]').value;
-    const company = document.querySelector('input[placeholder="الجهة / الشركة"]').value;
-
-    try {
-      const docRef = await addDoc(collection(db, "visitors_log"), {
-        name: visitorName,
-        company: company,
-        date: new Date().toLocaleString()
-      });
-      alert("تم التسجيل بنجاح!");
-    } catch (e) {
-      console.error("Error: ", e);
-      alert("حدث خطأ أثناء التسجيل");
-    }
+  // دالة تسجيل بيانات الزائر
+  window.saveVisitorData = async function() {
+      // سنقوم بربط هذه الحقول
+      try {
+          const docRef = await addDoc(collection(db, "visitors_log"), {
+              visitor_name: document.getElementById('nameInput').value, 
+              company: document.getElementById('companyInput').value,
+              timestamp: new Date()
+          });
+          alert("تم التسجيل بنجاح!");
+      } catch (e) {
+          console.error("Error: ", e);
+          alert("خطأ في الاتصال بالقاعدة");
+      }
   }
 </script>
 </body>
